Refactor chat frontend, add Reset
Frontend: refactored script.js
- Wrapped UI logic in DOMContentLoaded, simplified CSRF helper.
- Added typing animation, improved message append flow and error handling.
- Replaced form submit logic with button/Enter handling and cleaner POST body.

Template: updated chat.html
- Render pre-existing session chat_history, added FontAwesome icons, reorganized markup to match new JS.
- Styles: revamped style.css
- Reworked layout and theme (light/beige), expanded container, message bubble styling, scrollbar and responsive adjustments.

Backend: updated views.py
- Initialize OpenAI client from env, improved session handling, unified GET/POST behavior, added reset_chat view to clear session (CSRF exempt).

Routing: updated urls.py
- Added reset_chat/ route.

Repo: updated .gitignore
- expand Python/Django ignores and organize sections.

--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,42 @@
-# Python cache files
+# ----------------------------
+# Python / Django
+# ----------------------------
 __pycache__/
-*.py[cod]
-*$py.class
+*.pyc
+*.pyo
+*.pyd
+*.sqlite3
+db.sqlite3
 
 # Virtual environment
 venv/
-env/
-.venv/
+.env
+.env.local
 
-# Django local settings
-*.sqlite3
-*.log
-
-# Static files collected for production
+# ----------------------------
+# Django static / media
+# ----------------------------
+# Ignore generated static files
 /staticfiles/
-# Ignore node_modules if you have any
-node_modules/
 
-# IDE/editor files
+# Ignore user-uploaded media
+/media/
+
+# ----------------------------
+# IDE / OS files
+# ----------------------------
 .vscode/
 .idea/
-*.swp
-
-# OS files
 .DS_Store
 Thumbs.db
 
-# Secret environment variables
-.env
+# ----------------------------
+# Logs
+# ----------------------------
+*.log
+
+# ----------------------------
+# Secrets (API keys, etc.)
+# ----------------------------
+*.env
+*.key
